--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build && mv dist/03-Ecommerce/browser/index.csr.html dist/03-Ecommerce/browser/index.html",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:03-Ecommerce": "node dist/03-Ecommerce/server/server.mjs"
